--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,12 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rocket Bay</title>
+
+    <!-- ↓ ADD THIS: PayPal JS SDK -->
+    <script
+      src="https://www.paypal.com/sdk/js?client-id=YOUR_PAYPAL_CLIENT_ID&currency=PHP"
+      data-sdk-integration-source="button-factory"
+    ></script>
   </head>
   <body>
     <div id="root"></div>
